--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <html>
 <head>
    <script src='https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.2.5/svg.min.js'></script>
+   <!-- https://github.com/alexei/sprintf.js -->
+   <script src='https://raw.githubusercontent.com/alexei/sprintf.js/master/src/sprintf.js'></script>
+
    <script src='index.js'></script>
 </head>
 <body>
+   <!--
+   <svg width=500 height=500>
+     <path d="M300,200 h-150 a150,150 0 1,0 150,-150 z"
+           fill="red" stroke="blue" stroke-width="5" />
+   </svg>
+
+   <svg width=500 height=500>
+     <path d="M300,200 h-150 a150,150 0 1,0 150,-150 z"
+           fill="red" stroke="blue" stroke-width="5" />
+     <path d="M285,185 v-150 a150,150 0 0,0 -150,150 z"
+           fill="yellow" stroke="blue" stroke-width="5" />
+   </svg>
+   -->
+
    <div id='wheel-div'>
       <!--<svg id='lunch-wheel' width='500' height='500'>
          <circle cx='250' cy='250' r='240' stroke='green' stroke-width='4' fill='yellow' />
@@ -13,26 +30,35 @@
    </div>
 
    <script>
+      var wheelEl = makeEl('svg', {'width':500, 'height':500});
 
-      function makeLine(x1, y1, x2, y2) {
-         var line = makeEl('line');
-         setAttr(line, 'x1', x1);
-         setAttr(line, 'y1', y1);
-         setAttr(line, 'x2', x2);
-         setAttr(line, 'y2', y2);
-         setAttr(line, 'style', 'stroke:rgb(250, 0, 0); stroke-width:2');
-         return line;
-      }
- 
-      //var wheelEl = d.getElementById('lunch-wheel');
-      //var wheel = wheelEl.contentDocument;
+      //var line = makeLine('250', '250', '300', '300');
+      //append(wheelEl, line);
 
-      var wheelEl = makeEl('svg');
-      setAttr(wheelEl, 'width', '500');
-      setAttr(wheelEl, 'height', '500');
+      //var arc = internalArc(285, 185, 150, 150, 0, 1, 0, -150, 150);
+      var arcArgs = {
+         'moveX'     : 285,
+         'moveY'     : 185,
+         'radiusX'   : 150,
+         'radiusY'   : 150,
+         'rotX'      : 0,
+         'largeArc'  : 0,
+         'sweepFlag' : 0,
+         'x'         : -150,
+         'y'         : 150
+      };
+      var arc = makeArc(arcArgs);
+      append(wheelEl, arc);
 
-      var line = makeLine('250', '250', '300', '300');
-      append(wheelEl, line);
+      var attrs = {
+         'fill':        'yellow',
+         'stroke':      'blue',
+         'stroke-width':5,
+         'd':           'M 50 50 A 30,30 0 0,0 100,100 Z'
+      };
+
+      var test = makeEl('path', attrs);
+      append(wheelEl, test);
 
       var wheelDiv = getById('wheel-div');
       append(wheelDiv, wheelEl);
