--- a/index.html
+++ b/index.html
@@ -1,106 +1,28 @@
 <html>
 <head>
    <script src='https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.2.5/svg.min.js'></script>
-   <!-- https://github.com/alexei/sprintf.js -->
-   <script src='https://raw.githubusercontent.com/alexei/sprintf.js/master/src/sprintf.js'></script>
-
    <script src='index.js'></script>
 </head>
 <body>
-   <!--
-   <svg width=500 height=500>
-     <path d="M300,200 h-150 a150,150 0 1,0 150,-150 z"
-           fill="red" stroke="blue" stroke-width="5" />
-   </svg>
-
-   <svg width=500 height=500>
-     <path d="M300,200 h-150 a150,150 0 1,0 150,-150 z"
-           fill="red" stroke="blue" stroke-width="5" />
-     <path d="M285,185 v-150 a150,150 0 0,0 -150,150 z"
-           fill="yellow" stroke="blue" stroke-width="5" />
-   </svg>
-   -->
 
    <div id='wheel-div'>
-      <!--<svg id='lunch-wheel' width='500' height='500'>
-         <circle cx='250' cy='250' r='240' stroke='green' stroke-width='4' fill='yellow' />
-         <polygon points="200,10 250,190" style="fill:lime;stroke:purple;stroke-width:1" />
-         <line x1='250' y1='250' x2='500' y2='500' style='stroke:rgb(250, 0, 0); strokie-width:2' />
-      </svg> -->
    </div>
 
    <script>
-      var wheelEl = makeEl('svg', {'width':500, 'height':500});
+      var wheelEl = makeEl('svg', {'width':1000, 'height':800});
 
-      /*
-      var line = makeLine(250, 250, 253, 253);
-      append(wheelEl, line);
+      /*var line = makeLine(250, 250, 253, 253);
+      append(wheelEl, line);*/
 
-      //var arc = internalArc(285, 185, 150, 150, 0, 1, 0, -150, 150);
-      var arcArgs = {
-         'moveX'     : 250,
-         'moveY'     : 250,
-         'vertOrHorz': 'v',
-         'lineSize'  : -150,
-         'radiusX'   : 150,
-         'radiusY'   : 150,
-         'rotX'      : 0,
-         'largeArc'  : 0,
-         'sweepFlag' : 0,
-         'x'         : -150,
-         'y'         : 150
-      };
-      var arc = makeArc(arcArgs);
-      append(wheelEl, arc);
+      //makeLineDegree(wheelEl, 300, 300, 200, 30);
 
-      var arcArgs = {
-         'moveX'     : 255,
-         'moveY'     : 255,
-         'vertOrHorz': 'h',
-         'lineSize'  : -150,
-         'radiusX'   : 150,
-         'radiusY'   : 150,
-         'rotX'      : 0,
-         'largeArc'  : 1,
-         'sweepFlag' : 0,
-         'x'         : 150,
-         'y'         : -150
-      };
-      var arc = makeArc(arcArgs); 
-      append(wheelEl, arc);*/
+      makeArc(wheelEl, 300, 300, 200, 30, 180, 'purple');
 
-      /* custom arc
-      var attrs = {
-         'fill':        'yellow',
-         'stroke':      'blue',
-         'stroke-width':5,
-         'd':           'M 50 50 A 30,30 0 0,0 100,100 Z'
-      };
-      var test = makeEl('path', attrs);
-      append(wheelEl, test); */
-
-      var attrs = {
-         'fill':        'yellow',
-         'stroke':      'blue',
-         'stroke-width':5,
-         'd':           describeArc(300, 300, 200, 30, 180)
-      };
-      var test = makeEl('path', attrs);
-      append(wheelEl, test);
+      makeArc(wheelEl, 300, 300, 200, 0, 20, 'yellow');
 
       var wheelDiv = getById('wheel-div');
       append(wheelDiv, wheelEl);
      </script>
-
-   <!-- <?xml version="1.0" encoding="utf-8" ?> -->
-   <!--
-      <svg id="drawing" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" >
-         <script type="text/javascript">
-            var draw = SVG('drawing')
-            //draw.rect(100,100).animate().radius(100, 100).animate().fill('#f03').move(100,100)
-         </script>
-      </svg>
-   -->
 
 </body>
 </html>
