--- a/index.html
+++ b/index.html
@@ -1,60 +1,89 @@
 <html>
 <head>
    <script src='https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.2.5/svg.min.js'></script>
+   <!-- https://github.com/alexei/sprintf.js -->
+   <script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
+   <script src='https://cdnjs.cloudflare.com/ajax/libs/sprintf/1.0.3/sprintf.js'></script>
+   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+
    <script src='index.js'></script>
 </head>
-<body>
+<body ng-app='foodwheel' ng-controller='foodwheel' onkeypress='return keyPress(event)'>
+
+   <table id='placesList' style='border:1px solid black' >
+      <tr ng-repeat='(name, weight) in places'>
+         <td>{{ name }}</td>
+         <td>{{ weight }}</td>
+         <td><button ng-click='remove(name)'>delete</button></td>
+      </tr>
+   </table>
+
+   Enter new place:</br>
+   <input type='text' text='x' ng-model='places[x]'/>
 
    <div id='wheel-div'>
    </div>
 
    <script>
-      var wheelEl = makeEl('svg', {'width':1000, 'height':600});
-
-      /*var line = makeLine(250, 250, 253, 253);
-      append(wheelEl, line);*/
+      
+      var colors = ['purple', 'yellow', 'blue', 'pink', 'orange', 'green', 'brown'];
+      var currColorIndex = 0;
+      function getColor() {
+         if (currColorIndex+1 >= colors.length)
+            currColorIndex = 0;
+         return colors[currColorIndex++];
+      }
 
       function makePie(places) {
-         var colors = ['purple', 'yellow', 'blue', 'pink'];
+         var wheelEl = makeEl('svg', {'width':1000, 'height':600 }); //'id':'wheelSvg'});
+
+         var centerX = 300, centerY = 300;
+
          var currColorI = 0;
 
          var totalWeight = 0;
          for (var name in places)
             totalWeight += places[name];
          
-         var prevAngle = 0;
+         var startAngle = 0;
 
-         for (var name in places) {
-            var weight = places[name];
-            var nextSize = weight/totalWeight * 360;
-            var endAngle = prevAngle + nextSize;
-            var color = colors[currColorI++];
-            makeArc(wheelEl, 300, 300, 200, prevAngle, endAngle, color);
+         for (var name in places) { //places[name] is weight
+            var nextSize = places[name]/totalWeight * 360;
+            var endAngle = startAngle + nextSize;
+            var color = getColor();
+            makeArc(wheelEl, centerX, centerY, 200, startAngle, endAngle, color);
 
-
-            var transform = 'rotate(30 20,40)';
-            var textEl = makeText(wheelEl, name, 300, 300, 'red', transform);
-            prevAngle = endAngle;
+            var textRotAngle = (startAngle + endAngle) / 2 - 90;
+            var transform = sprintf('rotate(%i %i,%i)', textRotAngle, centerX, centerY);
+            name = '. . . . . . .' + name;
+            var textEl = makeText(wheelEl, name, centerX, centerY, 'black', transform);
+            startAngle = endAngle;
          }
+
+         var wheelDiv = getById('wheel-div');
+         wheelDiv.innerHTML = null;
+         append(wheelDiv, wheelEl);
 
       }
 
-      var places = {
-         'Artisan'      : 30,
-         'Subway'       : 20,
-         'Jimmy Jones'  : 60,
-         'Asian'        : 50
-      };
-      makePie(places);
-
+      //makePie(places);
 
       /*makeArc(wheelEl, 300, 300, 200, 30, 180, 'purple');
+      makeArc(wheelEl, 300, 300, 200, 0, 20, 'yellow');
+      var line = makeLine(250, 250, 253, 253);
+      append(wheelEl, line);*/
 
-      makeArc(wheelEl, 300, 300, 200, 0, 20, 'yellow'); */
+      var i = 0;
+      function f() {
+         window.setTimeout(() => {
+            $('#wheelSvg').css('transform', sprintf('rotate(%ideg)', i++));
+            $('#wheelSvg').css('transform-origin', "300px 300px");
 
+            f();
+         }, 30);
+      }
+      //f();
 
-      var wheelDiv = getById('wheel-div');
-      append(wheelDiv, wheelEl);
      </script>
 </body>
 </html>
