--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
    <script src='index.js'></script>
 </head>
-<body ng-app='foodwheel' ng-controller='foodwheel' onkeypress='return keyPress(event)'>
+<body ng-app='foodwheel' ng-controller='foodwheel' ng-keypress='keyPress($event)'>
 
    <table id='placesList' style='border:1px solid black' >
       <tr ng-repeat='(name, weight) in places'>
@@ -19,13 +19,24 @@
    </table>
 
    Enter new place:</br>
-   <input type='text' text='x' ng-model='places[x]'/>
+   <input ng-model='placeName' type='text' />
+   <select ng-model='placeWeight' ng-options='number for number in numbers'></select>
+   <button ng-click="add()">add</button>
 
-   <div id='wheel-div'>
+   <center> 
+      <button ng-click='spin()'>Spin the Wheel!</button>
+   </center>
+
+   <div id='wheel-div' style='margin:0; width:600px; height:600px' style='float:left'>
    </div>
+   <svg width=50 height=50 style='float:right; position:absolute; left:520px; top:500px'>
+      <line x1='0' y1='10' x2='50' y2='10'
+            style='stroke:rgb(250, 0, 0); stroke-width:15'>
+      </line>
+   </svg>
+
 
    <script>
-      
       var colors = ['purple', 'yellow', 'blue', 'pink', 'orange', 'green', 'brown'];
       var currColorIndex = 0;
       function getColor() {
@@ -35,18 +46,14 @@
       }
 
       function makePie(places) {
-         var wheelEl = makeEl('svg', {'width':1000, 'height':600 }); //'id':'wheelSvg'});
-
+         //'id':'wheelSvg'});
+         var wheelEl = makeEl('svg', {'width':'550px', 'height':'550px', 'float':'left'});
          var centerX = 300, centerY = 300;
-
-         var currColorI = 0;
-
          var totalWeight = 0;
          for (var name in places)
             totalWeight += places[name];
          
          var startAngle = 0;
-
          for (var name in places) { //places[name] is weight
             var nextSize = places[name]/totalWeight * 360;
             var endAngle = startAngle + nextSize;
@@ -60,6 +67,8 @@
             startAngle = endAngle;
          }
 
+         /*var line = makeLine(500, 300, 550, 300);
+         append(wheelEl, line);*/
          var wheelDiv = getById('wheel-div');
          wheelDiv.innerHTML = null;
          append(wheelDiv, wheelEl);
@@ -73,16 +82,6 @@
       var line = makeLine(250, 250, 253, 253);
       append(wheelEl, line);*/
 
-      var i = 0;
-      function f() {
-         window.setTimeout(() => {
-            $('#wheelSvg').css('transform', sprintf('rotate(%ideg)', i++));
-            $('#wheelSvg').css('transform-origin', "300px 300px");
-
-            f();
-         }, 30);
-      }
-      //f();
 
      </script>
 </body>
