--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
    <script src='https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.2.5/svg.min.js'></script>
+   <script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
    <!-- https://github.com/alexei/sprintf.js -->
    <script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
    <script src='https://cdnjs.cloudflare.com/ajax/libs/sprintf/1.0.3/sprintf.js'></script>
@@ -8,7 +9,7 @@
 
    <script src='index.js'></script>
 </head>
-<body ng-app='foodwheel' ng-controller='foodwheel' ng-keypress='keyPress($event)'>
+<body ng-app='foodwheel' ng-controller='foodwheel' ng-keypress='keyPress($event)' style='overflow:hidden'>
 
    <table id='placesList' style='border:1px solid black' >
       <tr ng-repeat='(name, weight) in places'>
@@ -35,8 +36,21 @@
       </line>
    </svg>
 
+   <div style='position:absolute;left:0;top:0;height:100%;width:100%;' id='map'>yo</div>
 
    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+
+      //service = new google.maps.places.PlacesService(map);
+      //service.nearbySearch(request, callback);    
+ 
+
       var colors = ['purple', 'yellow', 'blue', 'pink', 'orange', 'green', 'brown'];
       var currColorIndex = 0;
       function getColor() {
@@ -82,7 +96,10 @@
       var line = makeLine(250, 250, 253, 253);
       append(wheelEl, line);*/
 
-
+      // libraries=places
      </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDt3Wxu6tBs-CHgTp88x5VB3270RRx9sd8&callback=initMap"
+  type="text/javascript"></script>
+
 </body>
 </html>
