--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
    <!-- https://github.com/alexei/sprintf.js -->
    <script src='https://code.jquery.com/jquery-2.2.0.min.js'></script>
    <script src='https://cdnjs.cloudflare.com/ajax/libs/sprintf/1.0.3/sprintf.js'></script>
-   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 
-   <script>
-      places = {};
-   </script>
+   <script>places = {};</script>
 
    <script src='index.js'></script>
 </head>
@@ -28,7 +26,7 @@
    <select ng-model='placeWeight' ng-options='number for number in numbers'></select>
    <button ng-click="add()">add</button>
 
-   <center> 
+   <center>
       <button ng-click='spin()'>Spin the Wheel!</button>
    </center>
 
@@ -44,15 +42,13 @@
    <div style='height:0;width:0' id='map'></div>
 
    <script>
+      function error() { alert('geolocation not supported'); }
+
       ready = false;
-
-
-      function initialize() {
-         ready = true;
-      }
+      function initialize() { ready = true; }
 
       function success(position, callback_kk) {
-            /*var map;
+         /*var map;
          function initMap() {
            map = new google.maps.Map(document.getElementById('map'), {
              center: {lat: -34.397, lng: 150.644},
@@ -75,7 +71,8 @@
 
            var request = {
              location: otownZip,
-             radius: '500',
+             //radius: '500',
+             radius: '5000',
              types: ['food']
            };
 
@@ -96,26 +93,26 @@
 
          if (ready)
             initialize();
-         else error();
+         else
+            error();
          //service = new google.maps.places.PlacesService(map);
-         //service.nearbySearch(request, callback);    
-         
-      }
-      function error() {
-         alert('geolocation not supported');
+         //service.nearbySearch(request, callback);
+
       }
 
-      function start(callback) {      
+      function start(callback) {
          function success_return(position) {
             success(position, callback);
          }
          if (navigator.geolocation)
-            navigator.geolocation.getCurrentPosition(success_return, error);
-         else
+            navigator.geolocation.getCurrentPosition(success_return, ()=> {console.log('getCurrentPos Fail');error()});
+         else {
+            console.log('navigator.geolocation == null');
             error();
+         }
       }
 
-///////////////////////////// 
+/////////////////////////////
 
       var colors = ['purple', 'yellow', 'blue', 'pink', 'orange', 'green', 'brown'];
       var currColorIndex = 0;
@@ -126,7 +123,7 @@
       }
 
       function makePie(places) {
-         //'id':'wheelSvg'});
+         //'id':'wheelSvg');
          var wheelEl = makeEl('svg', {'width':'550px', 'height':'550px', 'float':'left'});
          var centerX = 300, centerY = 300;
          var totalWeight = 0;
@@ -152,9 +149,7 @@
          var wheelDiv = getById('wheel-div');
          wheelDiv.innerHTML = null;
          append(wheelDiv, wheelEl);
-
       }
-
       //makePie(places);
 
       /*makeArc(wheelEl, 300, 300, 200, 30, 180, 'purple');
@@ -164,8 +159,9 @@
 
       // libraries=places
      </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDt3Wxu6tBs-CHgTp88x5VB3270RRx9sd8&callback=initialize&libraries=places"
-  type="text/javascript"></script>
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDt3Wxu6tBs-CHgTp88x5VB3270RRx9sd8&callback=initialize&libraries=places"
+  type="text/javascript"></script> -->
+   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDt3Wxu6tBs-CHgTp88x5VB3270RRx9sd8&callback=initialize&libraries=places" type="text/javascript"></script>
 
 </body>
 </html>
